  64-bit file offsets (LFS default).

* A new configure option, --with-rtld-early-cflags, can be used to
  specify additional compiler flags for building the early startup code
  of the dynamic linker.  On targets which have CPU compatibility
  checks, this can help to ensure that proper diagnostics are printed if
  the dynamic loader runs on an incompatible CPU.

Deprecated and removed features, and other changes affecting compatibility:

* On x86-64, the LD_PREFER_MAP_32BIT_EXEC environment variable support
  has been removed since the first PT_LOAD segment is no longer executable
  due to defaulting to -z separate-code.

* The r_version update in the debugger interface makes the glibc binary
  incompatible with GDB binaries built without the following commits:

  c0154a4a21a gdb: Don't assume r_ldsomap when r_version > 1 on Linux
  4eb629d50d4 gdbserver: Check r_version < 1 for Linux debugger interface

  when audit modules or dlmopen are used.

* Intel MPX support (lazy PLT, ld.so profile, and LD_AUDIT) has been removed.

* The --enable-static-pie option is no longer available.  The glibc build
  configuration script now automatically detects static-pie support in the
  toolchain and architecture and enables it if available.

* The catchsegv script and associated libSegFault.so shared object have
  been removed.  There are widely-deployed out-of-process alternatives for
  catching coredumps and backtraces.

Changes to build and runtime requirements:

  [Add changes to build and runtime requirements here]

Security related changes:

  CVE-2022-23219: Passing an overlong file name to the clnt_create
  legacy function could result in a stack-based buffer overflow when
  using the "unix" protocol.  Reported by Martin Sebor.

  CVE-2022-23218: Passing an overlong file name to the svcunix_create
  legacy function could result in a stack-based buffer overflow.

The following bugs are resolved with this release:

  [The release manager will add the list generated by